database creation and updating

--- a/src/bestbuy-api-test.ipynb
+++ b/src/bestbuy-api-test.ipynb
@@ -78,27 +78,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"from\":1,\"to\":0,\"currentPage\":1,\"total\":0,\"totalPages\":0,\"queryTime\":\"0.006\",\"totalTime\":\"0.007\",\"partial\":false,\"canonicalUrl\":\"/v1/stores(postalCode=\\\\\"44121\\\\\")?show=storeId,storeType,name,city,region&format=json&apiKey=Syg9LF6J4rNlfmYpxgzCejev\",\"stores\":[]}'"
+       "{'from': 1,\n",
+       " 'to': 0,\n",
+       " 'currentPage': 1,\n",
+       " 'total': 0,\n",
+       " 'totalPages': 0,\n",
+       " 'queryTime': '0.013',\n",
+       " 'totalTime': '0.014',\n",
+       " 'partial': False,\n",
+       " 'canonicalUrl': '/v1/stores(postalCode=\"44121\")?show=storeId,storeType,name,city,region&format=json&apiKey=Syg9LF6J4rNlfmYpxgzCejev',\n",
+       " 'stores': []}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res.content"
+    "res.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +116,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.bestbuy.com/v1/stores(postalCode=55423)?format=json&show=storeId,storeType,name,city,region&apiKey=Syg9LF6J4rNlfmYpxgzCejev'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://api.bestbuy.com/v1/products/6084400/stores.json?postalCode=55423&apiKey=Syg9LF6J4rNlfmYpxgzCejev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"from\":1,\"to\":2,\"currentPage\":1,\"total\":2,\"totalPages\":1,\"queryTime\":\"0.029\",\"totalTime\":\"0.035\",\"partial\":false,\"canonicalUrl\":\"/v1/stores(postalCode=\\\\\"55423\\\\\")?show=storeId,storeType,name,city,region&format=json&apiKey=Syg9LF6J4rNlfmYpxgzCejev\",\"stores\":[{\"storeId\":281,\"storeType\":\"Big Box\",\"name\":\"RICHFIELD MN\",\"city\":\"Richfield\",\"region\":\"MN\"},{\"storeId\":8001,\"storeType\":\"Express Kiosk\",\"name\":\"BBM001HQMN\",\"city\":\"Richfield\",\"region\":\"MN\"}]}'"
+       "b'{\"from\":1,\"to\":2,\"currentPage\":1,\"total\":2,\"totalPages\":1,\"queryTime\":\"0.030\",\"totalTime\":\"0.041\",\"partial\":false,\"canonicalUrl\":\"/v1/stores(postalCode=\\\\\"55423\\\\\")?show=storeId,storeType,name,city,region&format=json&apiKey=Syg9LF6J4rNlfmYpxgzCejev\",\"stores\":[{\"storeId\":281,\"storeType\":\"Big Box\",\"name\":\"RICHFIELD MN\",\"city\":\"Richfield\",\"region\":\"MN\"},{\"storeId\":8001,\"storeType\":\"Express Kiosk\",\"name\":\"BBM001HQMN\",\"city\":\"Richfield\",\"region\":\"MN\"}]}'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -147,8 +185,8 @@
        " 'currentPage': 1,\n",
        " 'total': 2,\n",
        " 'totalPages': 1,\n",
-       " 'queryTime': '0.029',\n",
-       " 'totalTime': '0.035',\n",
+       " 'queryTime': '0.030',\n",
+       " 'totalTime': '0.041',\n",
        " 'partial': False,\n",
        " 'canonicalUrl': '/v1/stores(postalCode=\"55423\")?show=storeId,storeType,name,city,region&format=json&apiKey=Syg9LF6J4rNlfmYpxgzCejev',\n",
        " 'stores': [{'storeId': 281,\n",
@@ -163,7 +201,7 @@
        "   'region': 'MN'}]}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,11 +212,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "json = res2.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "req_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = [(req_time, item['storeId'], item['name'], item['city'], \n",
+    "         item['region']) for item in json['stores']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1575481587.596931, 281, 'RICHFIELD MN', 'Richfield', 'MN'),\n",
+       " (1575481587.596931, 8001, 'BBM001HQMN', 'Richfield', 'MN')]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info"
    ]
   },
   {
